--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -8,7 +8,7 @@
 
   --font-family: 'ProximaNova', sans-serif;
 
-  // Default layout
+  // Default layouts
   --default-layout-header-height: 60px;
   --default-layout-header-width: 1150px;
   --default-layout-horizontal-spacer: 24px;
